--- a/src/pages/svg-semicircle-percentage/index.astro
+++ b/src/pages/svg-semicircle-percentage/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../../layouts/Layout.astro'
 ---
 
-<Layout title="SVG Semicircle" client:load>
+<Layout title="SVG Semicircle">
 	<main>
     <h2>SVG Semicircle</h2>
     <p>Draw an <abbr title="Scalable Vector Graphics">SVG</abbr> semicircle path at a given percentage.</p>
@@ -59,5 +59,7 @@ import Layout from '../../layouts/Layout.astro'
       }
     }
   </style>
-  <script src="./index.ts"></script>
+  <script>
+    import './index.ts'
+  </script>
 </Layout>
