--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,6 +1,14 @@
+/*
+Colors
+- Large text on hotpink (#ff69b4) can be as light as #363636
+  for WCAG AAA support. 4.56:1
+*/
+
 :root {
   --system-ui: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --black: #222;
+  --black: #131313;
+  --hotpink: #ff69b4;
+  --border-radius: 0.75rem;
 }
 
 html {
@@ -20,17 +28,30 @@ abbr {
   text-decoration-thickness: 3px;
 }
 
+.screen-reader-only {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
+
+
+
 #nameplate {
   background: var(--black);
   color: #fff;
   display: flex;
-
-  gap: 1rem;
-  align-items: center;
+    align-items: center;
+    gap: 1rem;
   padding: 1rem;
   &-name {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 300;
+    abbr {
+      text-decoration: none;
+    }
   }
   &-back {
     background: rgba(255,255,255, 0.2);
@@ -51,42 +72,36 @@ abbr {
     font-size: 2rem;
   }
 }
+#structure {
+  display: flex;
+  gap: 5rem;
+  #content {
+    padding: 0 1rem 1rem 0;
+  }
+}
 #content {
-  padding: 1rem;
+  // padding: 0 1rem 1rem 0;
+  .description {
+    max-width: 36rem;
+    p {
+      line-height: 1.4;
+      margin: 1.4rem 0;
+    }
+  }
 }
 #footer {
   margin: 2rem 0;
   text-align: center;
-}
-.description {
-  max-width: 36rem;
-  p {
-    line-height: 1.4;
-    margin: 1.4rem 0;
+  .repo-link {
+    color: #767676;
+    text-decoration: none
   }
 }
-.screen-reader-only {
-  position:absolute;
-  left:-10000px;
-  top:auto;
-  width:1px;
-  height:1px;
-  overflow:hidden;
-}
-.repo-link {
-  color: #767676;
-  text-decoration: none
-}
 
-
-.box {
+@mixin border-box {
   border: 1px solid #ccc;
-  border-radius: 0.75rem 0.75rem 0.5rem 0.5rem;
+  border-radius: 0.75rem;
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.25);
-  display: inline-flex;
-  flex-direction: column;
-  margin-bottom: 2rem;
-  overflow: hidden;
   transition: box-shadow 250ms ease;
   &:focus,
   &:focus-within,
@@ -94,6 +109,16 @@ abbr {
     border-color: #b6b6b6;
     box-shadow: 0 0 0.35rem rgba(0, 0, 0, 0.5);
   }
+}
+
+.box {
+  @include border-box();
+  border-radius: 0.75rem 0.75rem 0.5rem 0.5rem;
+  display: inline-flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+  overflow: hidden;
+  transition: box-shadow 250ms ease;
   &-preview {
     padding: 1rem;
     display: flex;
@@ -135,6 +160,7 @@ abbr {
     width: 3rem;
   }
 }
+
 .text-input {
   display: flex;
   gap: 0.5rem;
@@ -145,5 +171,56 @@ abbr {
   }
   input[type="text"] {
 
+  }
+}
+
+
+// Isolation Navigation Drawer
+.drawer-list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  max-width: 360px;
+  &-item {
+    overflow: hidden;
+    display: flex;
+    align-items: stretch;
+    gap: 1rem;
+  }
+  &-item-icon {
+    background: var(--hotpink);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 60px;
+    min-width: 60px;
+    text-decoration: none;
+    .fill-foreground {
+      fill: var(--black);
+    }
+    .fill-background {
+      fill: var(--hotpink);
+    }
+    svg {
+      align-self: center;
+    }
+  }
+  &-item-text {
+    background: #fff;
+    color: var(--black);
+    padding: 1rem 1rem 1rem 0;
+    text-decoration: none;
+    a {
+      color: var(--black);
+      font-weight: 600;
+      text-decoration: none;
+    }
+    p {
+      color: #767676;
+      margin: 0;
+      padding: 0;
+    }
   }
 }
