--- a/app/globals.scss
+++ b/app/globals.scss
@@ -96,21 +96,9 @@ abbr {
   }
 }
 
-@mixin border-box {
-  border: 1px solid #ccc;
-  border-radius: 0.75rem;
-  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.25);
-  transition: box-shadow 250ms ease;
-  &:focus,
-  &:focus-within,
-  &:hover {
-    border-color: #b6b6b6;
-    box-shadow: 0 0 0.35rem rgba(0, 0, 0, 0.5);
-  }
-}
-
 .box {
-  @include border-box();
+  background: #fff;
+  border: 1px solid #ccc;
   border-radius: 0.75rem 0.75rem 0.5rem 0.5rem;
   display: inline-flex;
   flex-direction: column;
@@ -118,15 +106,20 @@ abbr {
   overflow: hidden;
   transition: box-shadow 250ms ease;
   &-preview {
+    border-bottom: 0;
     padding: 1rem;
     display: flex;
-    align-items: center;
-    justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 1rem;
+      justify-content: center;
+    &-label {
+      font-size: 1.25rem;
+      font-weight: 300;
+    }
   }
   &-actions {
     background-color: #edf4ff;
-    border-top: 1px solid #ccc;
-    border-radius: 0 0 0.5rem 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
