--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -146,10 +146,17 @@ abbr {
   padding: 0;
   max-width: 360px;
   &-item {
-    overflow: hidden;
+    cursor: pointer;
     display: flex;
-    align-items: stretch;
-    gap: 1rem;
+      align-items: stretch;
+      gap: 1rem;
+    overflow: hidden;
+    &[data-is-highlighted] {
+      --fill: 100%;
+      .fill-background {
+        fill: var(--white);
+      }
+    }
   }
   &-item-icon {
     --radius: 30px;
@@ -179,11 +186,7 @@ abbr {
       position: relative;
       z-index: 2;
       &:hover {
-        color: lightblue;
-        --fill: 100%;
-        .fill-background {
-          fill: var(--white);
-        }
+
       }
       &::after {
         content: '';
