--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -72,6 +72,10 @@ abbr {
   &-name {
     font-size: 1.75rem;
     font-weight: 300;
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
     abbr {
       text-decoration: none;
     }
