--- a/src/templates/base.scss
+++ b/src/templates/base.scss
@@ -27,7 +27,7 @@
   // UI elements
   --ui-background-color: #68d1f7; // 7.25:1 with #333
   --ui-border-radius: 0.75rem;
-  --ui-border-color: #b6b6b6;
+  --ui-border-color: var(--black-025);
   --ui-color: #333;
   --ui-padding: 0.75rem;
   --ui-button-background-color: #68d1f7;
@@ -90,6 +90,15 @@ abbr {
   initial-value: 0%;
 }
 
+.drawer-list-item {
+  &[data-is-highlighted] {
+    --fill: 100%;
+    .fill-background {
+      fill: var(--white);
+    }
+  }
+}
+
 .drawer-list-item-icon {
   --diameter: 30px;
   --track: 5px;
@@ -128,8 +137,6 @@ abbr {
   }
 }
 
-
-
 ////////////////////////////////////////////////////////////
 // Typography for Body Copy                               //
 ////////////////////////////////////////////////////////////
@@ -142,6 +149,15 @@ abbr {
     }
     &:last-child {
       margin-bottom: 0;
+    }
+  }
+
+  & > *:not(figure):not(table):not(.demo-html) {
+    margin-right: 0.75rem;
+    margin-left: 0.75rem;
+    @media (min-width: 500px) {
+      margin-right: 0;
+      margin-left: 0;
     }
   }
 
@@ -217,45 +233,5 @@ abbr {
   ul {
     line-height: 1.4;
     margin-left: 0.5rem;
-  }
-
-  .figure {
-    background: #fff;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    @media (min-width: 500px) {
-      border: none;
-      border-radius: 0.75rem;
-      box-shadow: inset 0 0 0 1px var(--black-025);
-      max-width: 325px;
-      width: auto;
-    }
-    &-subject {
-      padding: 0.75rem;
-      svg {
-        display: block;
-        margin: 0 auto;
-        max-width: 100%;
-        height: auto;
-      }
-    }
-    &-actions,
-    &-caption {
-      background-color: var(--ui-background-color);
-      padding: var(--ui-padding);
-      p {
-        margin: 0;
-        padding: 0;
-      }
-      @media (min-width: 500px) {
-        border-bottom-left-radius: var(--ui-border-radius);
-        border-bottom-right-radius: var(--ui-border-radius);
-      }
-    }
-    &-caption {
-      font-size: 0.9375;
-      font-style: italic;
-    }
   }
 }
